Add percentage counting method, that provides the percentage of each category of expenses and earnings. Add new page, optimize earnings/expenses pages. Improve the pages for adding earnings and expenses

--- a/PersonalManager.csproj
+++ b/PersonalManager.csproj
@@ -119,6 +119,9 @@
 	  <MauiXaml Update="Views\FinancePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\FinancePage2.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\ProfilePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
